# coverio

./: CITATION.cff  Cargo.toml  NOTES_AT_FUTURE_ME.md  README.md  Taskfile.yml
.github/workflows/: build-linux.yml  build-macos-arm64.yml
data/: coverage.json
src/: cli.rs  errors.rs  main.rs  report.rs
tests/: mod.rs
tests/input/: mod.rs
tests/input/collapse/: mod.rs
tests/input/invalid_data/: mod.rs
tests/input/invalid_input_file/: mod.rs
tests/input/invalid_stdin/: mod.rs
tests/input/no_percent_sign/: mod.rs
tests/input/non_existing_input_file/: mod.rs
tests/input/replacement/: mod.rs
tests/input/separators/: mod.rs
tests/input/squash/: mod.rs
tests/input/styles/: mod.rs
tests/input/valid_green_stdin/: mod.rs
tests/input/valid_input_file/: coverage.json  mod.rs
tests/input/valid_red_stdin/: mod.rs
tests/input/valid_stdin/: mod.rs
tests/input/valid_yellow_stdin/: mod.rs
tests/input/valid_zero_green_stdin/: mod.rs
tests/input/valid_zero_input_file/: coverage.json  mod.rs
tests/input/valid_zero_red_stdin/: mod.rs
tests/input/valid_zero_yellow_stdin/: mod.rs
