[package]
name = "coverio"
version = "0.0.5-dev"
authors = ["Dariusz Depta <depta@engos.de>"]
description = "Better code coverage reporting for Rust crates"
documentation = "https://docs.rs/coverio"
repository = "https://github.com/EngosSoftware/coverio.git"
keywords = ["code", "coverage", "reporting", "badge"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = [
    "rustfmt.toml",
    "Taskfile.yml",
    ".github/",
    ".gitignore",
    "NOTES_AT_FUTURE_ME.md",
    "CODE_OF_CONDUCT.md"
]

[dependencies]
clap = { version = "4.5.45", features = ["cargo"] }
serde_json = { version = "1.0.143", features = ["arbitrary_precision"] }

[dev-dependencies]
assert_cmd = "2.0.17"
